--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,32 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.openrewrite.maven</groupId>
+				<artifactId>rewrite-maven-plugin</artifactId>
+				<version>4.4.1-SNAPSHOT</version>
+				<configuration>
+					<activeStyles>
+						<activeStyle>org.openrewrite.java.SpringFormat</activeStyle>
+<!--						<style>org.openrewrite.java.SpringFormat</style>-->
+					</activeStyles>
+					<activeRecipes>
+						<recipe>org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration</recipe>
+					</activeRecipes>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.openrewrite.recipe</groupId>
+						<artifactId>rewrite-spring</artifactId>
+						<version>4.5.0-SNAPSHOT</version>
+					</dependency>
+					<dependency>
+						<groupId>org.openrewrite.recipe</groupId>
+						<artifactId>rewrite-testing-frameworks</artifactId>
+						<version>1.6.0-SNAPSHOT</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
