--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -237,6 +237,12 @@
 			<version>${jettison.version}</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.15.3</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
